Fix popup content align

--- a/css/main.css
+++ b/css/main.css
@@ -1721,6 +1721,7 @@
   width: 100%;
   z-index: 9999;
   overflow: auto;
+  line-height: 100vh;
 }
 .popup *,
 .popup *::before,
@@ -1736,8 +1737,6 @@
   right: 0;
   top: 0;
   z-index: 0;
-  overflow: auto;
-  line-height: 100vh;
 }
 .popup__content {
   -webkit-animation-duration: .3s;
