--- a/src/components/Popup.less
+++ b/src/components/Popup.less
@@ -9,6 +9,7 @@
   width: 100%;
   z-index: 9999;
   overflow: auto;
+  line-height: 100vh;
 
   *,
   *::before,
@@ -25,8 +26,6 @@
     right: 0;
     top: 0;
     z-index: 0;
-    overflow: auto;
-    line-height: 100vh;
   }
 
   &__content {
